--- a/pca_accuracy.ipynb
+++ b/pca_accuracy.ipynb
@@ -4628,33 +4628,7 @@
         "SUMMARY OF THE NOTEBOOK:-\n",
         "1. 357 Benign Cases and 212 Malignant breast cancer cases. Compactness Mean is more in the Malignant Cases as compared to the Benign Cases.\n",
         "2. Depending upon the data and the computational power, one should use GridSearch or RandomizedSearch for hyperparameter tuning\n",
-        "3. PCA is a great way to shift from high dimensionality to low dimensionality. One must choose the number of components (while performing PCA) to include in your model by adding the explained variance ratio of each component until you reach a total of around 0.8 or 80% to avoid overfitting.\n",
-        "4. Relying on complex algorithms always should not be the way out. Sometimes, even a simpler algorithms can work wonders."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "3c84b020",
-      "metadata": {
-        "papermill": {
-          "duration": 0.016062,
-          "end_time": "2022-05-27T10:39:32.750499",
-          "exception": false,
-          "start_time": "2022-05-27T10:39:32.734437",
-          "status": "completed"
-        },
-        "tags": [],
-        "id": "3c84b020"
-      },
-      "source": [
-        "**Resources**\n",
-        "- https://towardsdatascience.com/support-vector-machine-introduction-to-machine-learning-algorithms-934a444fca47\n",
-        "- https://scikit-learn.org/stable/modules/svm.html\n",
-        "- https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html\n",
-        "- https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
-        "- https://www.youtube.com/c/DataProfessor\n",
-        "\n",
-        "If you like the notebook, please be sure to leave an upvote on your way out. THANKS FOR YOUR TIME!!"
+        "3. PCA is a great way to shift from high dimensionality to low dimensionality. One must choose the number of components (while performing PCA) to include in your model by adding the explained variance ratio of each component until you reach a total of around 0.8 or 80% to avoid overfitting.\n"
       ]
     }
   ],
